update imports and move notif data retrieval to onInit

--- a/src/app/notifications/notifications.component.html
+++ b/src/app/notifications/notifications.component.html
@@ -13,7 +13,7 @@
           </ng-template>
 
           <div class="tab-content">
-            <ign-table [notificationData]="inboxData"></ign-table>
+            <ign-notifications-table [notificationData]="inboxData"></ign-notifications-table>
           </div>
         </mat-tab>
 
@@ -26,7 +26,7 @@
           </ng-template>
 
           <div class="tab-content">
-            <ign-table [notificationData]="reviewRequestedData"></ign-table>
+            <ign-notifications-table [notificationData]="reviewRequestedData"></ign-notifications-table>
           </div>
         </mat-tab>
 
@@ -39,7 +39,7 @@
           </ng-template>
 
           <div class="tab-content">
-            <ign-table [notificationData]="subscribedData"></ign-table>
+            <ign-notifications-table [notificationData]="subscribedData"></ign-notifications-table>
           </div>
         </mat-tab>
 
@@ -52,7 +52,7 @@
           </ng-template>
 
           <div class="tab-content">
-            <ign-table [notificationData]="mentionedData"></ign-table>
+            <ign-notifications-table [notificationData]="mentionedData"></ign-notifications-table>
           </div>
         </mat-tab>
       </mat-tab-group>
