--- a/src/app/admin/cloudsim/visualizer-tester/sim-visualizer-tester.component.html
+++ b/src/app/admin/cloudsim/visualizer-tester/sim-visualizer-tester.component.html
@@ -59,8 +59,9 @@
 
       <a class="follow-button" *ngIf="following" mat-icon-button (click)="follow(null)" title="Stop following">Stop following</a>
 
-      <div class="controls">
+      <div class="controls" *ngIf="(ws.status$ | async) === 'Ready'">
         <a mat-icon-button (click)="toggleLights()" title="Toggle lights"><mat-icon>highlight</mat-icon></a>
+        <a mat-icon-button (click)="snapshot()" title="Take a snapshot"><mat-icon>camera_alt</mat-icon></a>
         <a mat-icon-button (click)="resetView()" title="Reset view"><mat-icon>home</mat-icon></a>
         <a mat-icon-button (click)="toggleFullscreen()" title="Full screen"><mat-icon>fullscreen</mat-icon></a>
       </div>
