Example for websocket topic unsubscribe
Signed-off-by: Nate Koenig <nate@openrobotics.org>

--- a/src/app/visualization/visualization.component.html
+++ b/src/app/visualization/visualization.component.html
@@ -20,6 +20,11 @@
         <button mat-raised-button (click)="disconnect()" *ngIf="connectionStatus !== 'Disconnected'">
           Disconnect
         </button>
+
+        <button mat-raised-button (click)="topicUnsubscribe()" *ngIf="connectionStatus !== 'Disconnected'">
+          Unsubscribe
+        </button>
+
       </div>
     </div>
   </div>
