Adding application page
Signed-off-by: Nate Koenig <nate@openrobotics.org>

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -26,6 +26,9 @@
           <a mat-list-item routerLink="/collections" (click)="closeSidenav()">
             <mat-icon>collections</mat-icon> Collections
           </a>
+          <a mat-list-item routerLink="/applications" (click)="closeSidenav()">
+            <mat-icon>widgets</mat-icon> Applications
+          </a>
           <mat-divider></mat-divider>
           <a mat-list-item routerLink="/visualization" (click)="closeSidenav()">
             Visualization
