--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -26,7 +26,7 @@
           <a mat-list-item routerLink="/collections" (click)="closeSidenav()">
             <mat-icon>collections</mat-icon> Collections
           </a>
-          <a mat-list-item routerLink="/applications" (click)="closeSidenav()">
+          <a *ngIf="enableApps" mat-list-item routerLink="/applications" (click)="closeSidenav()">
             <mat-icon>widgets</mat-icon> Applications
           </a>
           <mat-divider></mat-divider>
