--- a/src/app/settings/settings.component.html
+++ b/src/app/settings/settings.component.html
@@ -135,10 +135,10 @@
           </p>
           <mat-slide-toggle
             color="primary"
-            [checked]="experimentalGzWeb"
-            (change)="onToggleGzWebFeature($event)">
+            [checked]="experimentalApps"
+            (change)="onToggleAppsFeature($event)">
           </mat-slide-toggle>
-          <span>Enable <a href="http://gazebosim.org/gzweb" target="_blank">GzWeb</a> for model visualization during model upload.</span>
+          <span>Enable Applications for running cloud-hosted simulations.</span>
         </div>
       </mat-tab>
     </mat-tab-group>
