--- a/src/app/cloudsim/detail/simulation.component.scss
+++ b/src/app/cloudsim/detail/simulation.component.scss
@@ -71,6 +71,7 @@
   right: 0;
   z-index: 10;
   height: calc(100% - 120px);
+  width: 20%;
 
   h2 {
     padding: 10px;
@@ -79,9 +80,21 @@
   .entity-list  {
     overflow-y: scroll;
   }
-  
+
   .entity-list .mat-list-item:hover {
     background-color: #e3e3e7;
     cursor: pointer;
+  }
+
+  .sensor-topic {
+    // For making an ellipsis on the left side of the string.
+    text-overflow: ellipsis;
+    overflow: hidden;
+    white-space: nowrap;
+
+    // Some leading special characters (such as a / ) recognize rtl mode and change their position.
+    // To avoid this, the string in the template must lead with a left-to-right mark (&lrm;).
+    direction: rtl;
+    text-align: left;
   }
 }
