--- a/src/app/applications/applications.component.html
+++ b/src/app/applications/applications.component.html
@@ -7,8 +7,13 @@
     </p>
 
     <p>
-      <a href='https://openrobotics.freshdesk.com/support/solutions/43000370684'>Click here for more information</a>
+      <a href='https://openrobotics.freshdesk.com/support/solutions/43000370684'>Click here for more information about applications</a>
     </p>
+
+    <p>
+      <a href='https://github.com/osrf/subt/wiki/Cloudsim'>Click here for more information about our cloud architecture and how it is used for SubT.</a>
+    </p>
+
   </div>
 
   <div *ngIf="authService.isAuthenticated()">
