Add button to delete and organization
Signed-off-by: Nate Koenig <nate@openrobotics.org>

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -115,7 +115,7 @@
             routerLink="/{{org}}" routerLinkActive="active">{{org}}</button>
           <mat-divider></mat-divider>
           <button mat-menu-item
-            routerLink="/settings" fragment="organizations" routerLinkActive="active">Add Organization</button>
+            routerLink="/settings" fragment="organizations" routerLinkActive="active">Manage Organizations</button>
         </mat-menu>
       </mat-toolbar>
 
