Disable model dragging because it doesn't work

--- a/src/app/model/model.component.html
+++ b/src/app/model/model.component.html
@@ -152,10 +152,12 @@
           </mat-list-item>
         </mat-list>
 
+        <!-- Disable because it doesn' work with Ignition
         <a [href]="getDragUrl()" class="drag-button">
           <mat-icon _ngcontent-c20="" class="mat-icon material-icons" role="img" aria-hidden="true">mouse</mat-icon>
           Drag me!
         </a>
+        -->
 
       </div>
     </div>
