--- a/src/app/file-upload/file-upload.component.html
+++ b/src/app/file-upload/file-upload.component.html
@@ -56,6 +56,6 @@
   </div>
 
   <div *ngIf="uploading" fxLayout="row" fxLayoutAlign="center center" fxFill>
-    <img class="uploading-gif" src="assets/images/gz.gif">
+    <div id="html-spinner"></div>
   </div>
 </div>
