--- a/src/app/world/world.component.html
+++ b/src/app/world/world.component.html
@@ -35,7 +35,7 @@
           <div class="gallery-container-inner" fxLayoutAlign="center center">
 
             <div fxLayout="column" fxLayoutAlign="center center" *ngIf="!galleryImages">
-              <img class="loading-gif" src="assets/images/gz.gif">
+              <div id="html-spinner"></div>
               <span class="mat-typography">Fetching images from server</span>
             </div>
 
