--- a/src/app/model/edit/thumbnail-generator/thumbnail-generator.component.html
+++ b/src/app/model/edit/thumbnail-generator/thumbnail-generator.component.html
@@ -25,7 +25,7 @@
   Generate
 </button>
 
-<img src="assets/images/gz.gif" *ngIf="state === 'generating'">
+<div id="html-spinner" *ngIf="state === 'generating'"></div>
 
 <p *ngIf="state === 'generating'">
   The model is being rendered. Please wait...
