--- a/src/app/model/model.component.html
+++ b/src/app/model/model.component.html
@@ -44,7 +44,7 @@
           <div class="gallery-container-inner" fxLayoutAlign="center center">
 
             <div fxLayout="column" fxLayoutAlign="center center" *ngIf="!galleryImages">
-              <img class="loading-gif" src="assets/images/gz.gif">
+              <div id="html-spinner" *ngIf="loading || !resources"></div>
               <span class="mat-typography">Fetching images from server</span>
             </div>
 
