--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -67,3 +67,43 @@ a.mat-menu-item > mat-icon {
   padding: 20px 0;
   margin: 0 20px;
 }
+
+#html-spinner,
+#html-spinner:after {
+  border-radius: 50%;
+  width: 5em;
+  height: 5em;
+}
+#html-spinner {
+  margin: 30px auto;
+  font-size: 10px;
+  position: relative;
+  text-indent: -9999em;
+  border: 0.6em solid rgba(100, 90, 83, 0.1);
+  border-left: 0.6em solid #f58113;
+  -webkit-transform: translateZ(0);
+  -ms-transform: translateZ(0);
+  transform: translateZ(0);
+  -webkit-animation: rotate 1.1s infinite linear;
+  animation: rotate 1.1s infinite linear;
+}
+@-webkit-keyframes rotate {
+  0% {
+    -webkit-transform: rotate(0deg);
+    transform: rotate(0deg);
+  }
+  100% {
+    -webkit-transform: rotate(360deg);
+    transform: rotate(360deg);
+  }
+}
+@keyframes rotate {
+  0% {
+    -webkit-transform: rotate(0deg);
+    transform: rotate(0deg);
+  }
+  100% {
+    -webkit-transform: rotate(360deg);
+    transform: rotate(360deg);
+  }
+}
