--- a/src/app/auth/callback.component.scss
+++ b/src/app/auth/callback.component.scss
@@ -1,10 +1,10 @@
-@import '~@angular/material/theming';
+@use '~@angular/material' as mat;
 @import '../../styles/custom-theme.scss';
 
 .page-content {
   margin: 20px 20px;
 
   a {
-    color: mat-color($custom-theme-primary, 700);
+    color: mat.get-color-from-palette($custom-theme-primary, 700);
   }
 }
