--- a/src/app/fuel-home/fuel-home.component.scss
+++ b/src/app/fuel-home/fuel-home.component.scss
@@ -1,4 +1,4 @@
-@import '~@angular/material/theming';
+@use '~@angular/material' as mat;
 @import '../../styles/custom-theme.scss';
 
 .section {
@@ -16,7 +16,7 @@
 }
 
 .section p a {
-  color: mat-color($custom-theme-primary, 700);
+  color: mat.get-color-from-palette($custom-theme-primary, 700);
 }
 
 .card {
