--- a/src/app/item-card/item-card.component.scss
+++ b/src/app/item-card/item-card.component.scss
@@ -1,4 +1,4 @@
-@import '~@angular/material/theming';
+@use '~@angular/material' as mat;
 @import '../../styles/custom-theme.scss';
 
 mat-card {
@@ -27,7 +27,7 @@ mat-card {
     right: 2em;
     bottom: -1.5em;
     /* Setting the primary color here prevents the flicker from the accent color. */
-    background-color: mat-color($custom-theme-primary) !important;
+    background-color: mat.get-color-from-palette($custom-theme-primary) !important;
   }
 
   .image-container {
