--- a/src/app/logfile/new/new-logfile-dialog.component.scss
+++ b/src/app/logfile/new/new-logfile-dialog.component.scss
@@ -1,4 +1,4 @@
-@import '~@angular/material/theming';
+@use '~@angular/material' as mat;
 @import '../../../styles/custom-theme.scss';
 
 .filename-container {
@@ -23,5 +23,5 @@
 }
 
 .error {
-  color: mat-color($custom-theme-warn);
+  color: mat.get-color-from-palette($custom-theme-warn);
 }
