--- a/src/app/model/edit/edit-model.component.scss
+++ b/src/app/model/edit/edit-model.component.scss
@@ -1,4 +1,4 @@
-@import '~@angular/material/theming';
+@use '~@angular/material' as mat;
 @import '../../../styles/custom-theme.scss';
 
 .content {
@@ -20,7 +20,7 @@ h2 {
 }
 
 .danger {
-  color: mat-color($custom-theme-warn)
+  color: mat.get-color-from-palette($custom-theme-warn)
 }
 
 mat-radio-group {
