--- a/src/app/page-title/page-title.component.scss
+++ b/src/app/page-title/page-title.component.scss
@@ -1,10 +1,10 @@
-@import '~@angular/material/theming';
+@use '~@angular/material' as mat;
 @import '../../styles/custom-theme.scss';
 
 :host {
   display: inline-block;
   box-sizing: border-box;
-  color: mat-color($custom-theme-primary);
+  color: mat.get-color-from-palette($custom-theme-primary);
 }
 
 h1 {
