--- a/src/app/settings/settings.component.scss
+++ b/src/app/settings/settings.component.scss
@@ -1,4 +1,4 @@
-@import '~@angular/material/theming';
+@use '~@angular/material' as mat;
 @import '../../styles/custom-theme.scss';
 
 gz-page-title {
@@ -31,7 +31,7 @@ mat-slide-toggle {
 }
 
 a {
-  color: mat-color($custom-theme-primary, 700);
+  color: mat.get-color-from-palette($custom-theme-primary, 700);
 }
 
 .hover-display {
