--- a/src/app/world/new/new-world.component.scss
+++ b/src/app/world/new/new-world.component.scss
@@ -1,4 +1,4 @@
-@import '~@angular/material/theming';
+@use '~@angular/material' as mat;
 @import '../../../styles/custom-theme.scss';
 
 .page-content {
@@ -16,7 +16,7 @@ gz-page-title {
 }
 
 a {
-  color: mat-color($custom-theme-primary, 700);
+  color: mat.get-color-from-palette($custom-theme-primary, 700);
 }
 
 .contentRules {
