Style updates at Angular 13

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,4 +1,4 @@
-@use '~@angular/material' as mat;
+@use '@angular/material' as mat;
 @import 'custom-theme.scss';
 @import "@angular/material/prebuilt-themes/indigo-pink.css";
 /* Required for ngx-gallery Icons */
