Migrated to angular14
Signed-off-by: Nate Koenig <nate@openrobotics.org>

--- a/src/app/collection/collection.component.scss
+++ b/src/app/collection/collection.component.scss
@@ -1,5 +1,5 @@
 @import '~@angular/material/theming';
-@import '../../styles/custom-theme.scss';
+@import '../../styles.scss';
 
 div ::ng-deep .mat-tab-header {
   align-self: center;
