--- a/src/app/fuel-resource/list/fuel-resource-list.component.scss
+++ b/src/app/fuel-resource/list/fuel-resource-list.component.scss
@@ -1,5 +1,5 @@
 @import '~@angular/material/theming';
-@import '../../../styles/custom-theme.scss';
+@import '../../../styles.scss';
 
 .item-card {
   min-width: 12em;
