--- a/src/app/organization/new/new-organization-dialog.component.scss
+++ b/src/app/organization/new/new-organization-dialog.component.scss
@@ -1,5 +1,5 @@
 @import '~@angular/material/theming';
-@import '../../../styles/custom-theme.scss';
+@import '../../../styles.scss';
 
 form {
   max-height: 65vh;
