--- a/src/app/tags/tags.component.scss
+++ b/src/app/tags/tags.component.scss
@@ -1,5 +1,5 @@
 @import '~@angular/material/theming';
-@import '../../styles/custom-theme.scss';
+@import '../../styles.scss';
 
 /* This styles the first chip. Taken from the Angular Material repository. */
 .mat-chip {
