--- a/src/app/world/world.component.scss
+++ b/src/app/world/world.component.scss
@@ -1,5 +1,9 @@
 @import '~@angular/material/theming';
-@import '../../styles/custom-theme.scss';
+@import '../../styles.scss';
+@import 'swiper/scss';
+@import 'swiper/scss/navigation';
+@import 'swiper/scss/pagination';
+
 
 .content {
   width: 100%;
@@ -198,6 +202,4 @@ pre.bibtex {
   color: mat-color($custom-theme-primary);
 }
 
-ngx-gallery ::ng-deep .ngx-gallery-thumbnails .ngx-gallery-thumbnail {
-  border: none !important;
-}
+
