--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,5 +1,5 @@
 @import '~@angular/material/theming';
-@import '../styles/custom-theme.scss';
+@import '../styles.scss';
 
 // Local variables.
 $sidenav-width: 170px;
