--- a/src/app/auth/callback.component.scss
+++ b/src/app/auth/callback.component.scss
@@ -1,5 +1,5 @@
 @import '~@angular/material/theming';
-@import '../../styles/custom-theme.scss';
+@import '../../styles.scss';
 
 .page-content {
   margin: 20px 20px;
