--- a/src/app/cloudsim/detail/simulation.component.scss
+++ b/src/app/cloudsim/detail/simulation.component.scss
@@ -1,5 +1,5 @@
 @import '~@angular/material/theming';
-@import '../../../styles/custom-theme.scss';
+@import '../../../styles.scss';
 
 .content {
   width: 100%;
