--- a/src/app/collection/dialog/collection-dialog.component.scss
+++ b/src/app/collection/dialog/collection-dialog.component.scss
@@ -1,5 +1,5 @@
 @import '~@angular/material/theming';
-@import '../../../styles/custom-theme.scss';
+@import '../../../styles.scss';
 
 .collection-input {
   width: 100%;
