--- a/src/app/collection/edit/edit-collection.component.scss
+++ b/src/app/collection/edit/edit-collection.component.scss
@@ -1,5 +1,5 @@
 @import '~@angular/material/theming';
-@import '../../../styles/custom-theme.scss';
+@import '../../../styles.scss';
 
 .unauthorized {
   margin: 1em;
