--- a/src/app/file-upload/file-upload.component.scss
+++ b/src/app/file-upload/file-upload.component.scss
@@ -1,5 +1,5 @@
 @import '~@angular/material/theming';
-@import '../../styles/custom-theme.scss';
+@import '../../styles.scss';
 
 .button-row {
   margin-bottom: 20px;
