--- a/src/app/fuel-resource/report-dialog/report-dialog.component.scss
+++ b/src/app/fuel-resource/report-dialog/report-dialog.component.scss
@@ -1,5 +1,5 @@
 @import '~@angular/material/theming';
-@import '../../../styles/custom-theme.scss';
+@import '../../../styles.scss';
 
 .report-radio-group {
     margin: 5px;
