--- a/src/app/logfile/new/new-logfile-dialog.component.scss
+++ b/src/app/logfile/new/new-logfile-dialog.component.scss
@@ -1,5 +1,5 @@
 @import '~@angular/material/theming';
-@import '../../../styles/custom-theme.scss';
+@import '../../../styles.scss';
 
 .filename-container {
   padding-bottom: 12px;
