--- a/src/app/metadata/metadata.component.scss
+++ b/src/app/metadata/metadata.component.scss
@@ -1,5 +1,5 @@
 @import '~@angular/material/theming';
-@import '../../styles/custom-theme.scss';
+@import '../../styles.scss';
 
 mat-form-field {
   padding-right: 20px;
