--- a/src/app/model/new/new-model.component.scss
+++ b/src/app/model/new/new-model.component.scss
@@ -1,5 +1,5 @@
 @import '~@angular/material/theming';
-@import '../../../styles/custom-theme.scss';
+@import '../../../styles.scss';
 
 gz-page-title {
   padding-left: 20px;
