--- a/src/app/page-not-found/page-not-found.component.scss
+++ b/src/app/page-not-found/page-not-found.component.scss
@@ -1,5 +1,5 @@
 @import '~@angular/material/theming';
-@import '../../styles/custom-theme.scss';
+@import '../../styles.scss';
 
 h1 {
   font-size: 10em;
