--- a/src/app/settings/access-token-dialog.component.scss
+++ b/src/app/settings/access-token-dialog.component.scss
@@ -1,5 +1,5 @@
 @import '~@angular/material/theming';
-@import '../../styles/custom-theme.scss';
+@import '../../styles.scss';
 
 .mat-dialog-content {
   margin-bottom: 24px;
