--- a/src/app/world/new/new-world.component.scss
+++ b/src/app/world/new/new-world.component.scss
@@ -1,5 +1,5 @@
 @import '~@angular/material/theming';
-@import '../../../styles/custom-theme.scss';
+@import '../../../styles.scss';
 
 .page-content {
   padding: 0 20px;
