--- a/src/app/world/world.component.html
+++ b/src/app/world/world.component.html
@@ -43,10 +43,10 @@
               <span class="mat-typography font-x-large">This world has no thumbnails.</span>
             </div>
 
-            <ngx-gallery *ngIf="galleryImages && galleryImages.length != 0"
-              [options]="galleryOptions"
-              [images]="galleryImages">
-            </ngx-gallery>
+            <swiper *ngIf="galleryImages && galleryImages.length != 0"
+              [config]="galleryOptions">
+              <ng-template *ngFor="let img of galleryImages" swiperSlide><img src="{{img}}"/></ng-template>
+            </swiper>
 
           </div>
         </div>
