--- a/src/app/model/model.component.scss
+++ b/src/app/model/model.component.scss
@@ -1,8 +1,6 @@
 @import '~@angular/material/theming';
 @import '../../styles.scss';
-@import 'swiper/scss';
-@import 'swiper/scss/navigation';
-@import 'swiper/scss/pagination';
+@import '../../swiper.scss';
 
 .content {
   width: 100%;
