--- a/src/app/world/world.component.html
+++ b/src/app/world/world.component.html
@@ -32,22 +32,35 @@
           </div>
         </div>
         <div class="gallery-container-outer">
-          <div class="gallery-container-inner" fxLayoutAlign="center center">
+          <div class="gallery-container-inner" fxLayout="column"  fxLayoutAlign="center center">
 
             <div fxLayout="column" fxLayoutAlign="center center" *ngIf="!galleryImages">
               <div id="html-spinner"></div>
               <span class="mat-typography">Fetching images from server</span>
             </div>
 
-            <div fxLayout="row" fxLayoutAlign="center center" *ngIf="galleryImages && galleryImages.length == 0">
+            <div fxLayout="column" fxLayoutAlign="center center" *ngIf="galleryImages && galleryImages.length == 0">
               <span class="mat-typography font-x-large">This world has no thumbnails.</span>
             </div>
 
-            <swiper *ngIf="galleryImages && galleryImages.length != 0"
-              [config]="galleryOptions">
-              <ng-template *ngFor="let img of galleryImages" swiperSlide><img src="{{img}}"/></ng-template>
+            <swiper *ngIf="galleryImages && galleryImages.length > 0"
+                    style="--swiper-navigation-color: #000;--swiper-pagination-color: #000"
+                    [spaceBetween]="0"
+                    [navigation]="true"
+                    [thumbs]="{ swiper: thumbsSwiper }"
+                    class="mainSwiper">
+            <ng-template *ngFor="let img of galleryImages" swiperSlide><img [src]="img"/></ng-template>
             </swiper>
 
+            <swiper *ngIf="galleryImages && galleryImages.length > 0"
+              (swiper)="thumbsSwiper = $event"
+              [spaceBetween]="10"
+              [slidesPerView]="galleryImages !== undefined ? galleryImages.length : 0"
+              [freeMode]= "true"
+              [watchSlidesProgress]="true"
+              class="thumbSwiper">
+            <ng-template *ngFor="let img of galleryImages" swiperSlide><img [src]="img"/></ng-template>
+            </swiper>
           </div>
         </div>
       </div>
