--- a/src/app/visualization/visualization.component.html
+++ b/src/app/visualization/visualization.component.html
@@ -31,16 +31,18 @@
 
       <a class="follow-button" *ngIf="following" mat-icon-button (click)="follow(null)" title="Stop following">Stop following</a>
 
+      <!--
       <div class="controls" *ngIf="(ws.status$ | async) === 'Ready'">
         <a mat-icon-button (click)="toggleLights()" title="Toggle lights"><mat-icon>highlight</mat-icon></a>
         <a mat-icon-button (click)="snapshot()" title="Take a snapshot"><mat-icon>camera_alt</mat-icon></a>
         <a mat-icon-button (click)="resetView()" title="Reset view"><mat-icon>home</mat-icon></a>
         <a mat-icon-button (click)="toggleFullscreen()" title="Full screen"><mat-icon>fullscreen</mat-icon></a>
       </div>
+      -->
 
       <div class="inner" fxLayoutAlign="center center">
         <div fxLayout="row" fxLayoutAlign="center center">
-          <div id="scene" (window:resize)="resize()"></div>
+          <div id="gz-scene" (window:resize)="resize()"></div>
           <div fxLayout="column" class="gz3d-side-panel" *ngIf="models.length > 0">
             <h2>Entities</h2>
             <mat-list class="entity-list">
