--- a/src/app/tags/tags.component.html
+++ b/src/app/tags/tags.component.html
@@ -25,7 +25,7 @@
 
 <ng-template #tagsDisplay>
   <div fxLayout="row" fxLayoutGap="10px" fxFill>
-    <mat-icon class="margin-align" title="Tags" svgIcon="tag-multiple"></mat-icon>
+    <mat-icon class="margin-align" title="Tags">sell</mat-icon>
 
     <div *ngIf="tags && tags.length > 0; else noTagsBlock">
       <mat-chip-list>
