--- a/src/app/model/model.component.html
+++ b/src/app/model/model.component.html
@@ -52,25 +52,9 @@
               <span class="mat-typography font-x-large">This model has no thumbnails.</span>
             </div>
 
-            <swiper  *ngIf="galleryImages && galleryImages.length > 0"
-                    style="--swiper-navigation-color: #000;--swiper-pagination-color: #000"
-                    [spaceBetween]="0"
-                    [navigation]="true"
-                    [thumbs]="{ swiper: thumbsSwiper }"
-                    class="mainSwiper">
-            <ng-template *ngFor="let img of galleryImages" swiperSlide><img [src]="img"/></ng-template>
-            </swiper>
-
-            <swiper *ngIf="galleryImages && galleryImages.length > 0"
-              (swiper)="thumbsSwiper = $event"
-              [spaceBetween]="0"
-              [slidesPerView]="galleryImages !== undefined ? galleryImages.length : 0"
-              [freeMode]="true"
-              [watchSlidesProgress]="true"
-              class="thumbSwiper">
-            <ng-template *ngFor="let img of galleryImages" swiperSlide><img [src]="img"/></ng-template>
-            </swiper>
-
+            <ng-container *ngIf="galleryImages?.length > 0">
+              <gz-gallery [images]="galleryImages"></gz-gallery>
+            </ng-container>
           </div>
         </div>
       </div>
