Use new collections Service params

--- a/src/app/collection/list/collection-list.component.html
+++ b/src/app/collection/list/collection-list.component.html
@@ -1,8 +1,9 @@
 <div class="page-content-inner mat-typography" fxLayout="row">
-  <gz-fuel-resource-list [resources]="collections"
-                          resourceType="collections"
-                          [finished]="!paginatedCollections?.hasNextPage()"
-                          (onLoadMore)="loadNextCollectionsPage()"
-                          fxFlex>
+  <gz-fuel-resource-list fxFlex
+                         resourceType="collections"
+                         [resources]="collections"
+                         [length]="paginatedCollections.totalCount"
+                         [finished]="!paginatedCollections?.hasNextPage()"
+                         (pageChange)="getCollections($event)">
   </gz-fuel-resource-list>
 </div>
