--- a/src/app/fuel-resource/list/fuel-resource-list.component.html
+++ b/src/app/fuel-resource/list/fuel-resource-list.component.html
@@ -15,8 +15,9 @@
       </div>
 
       <mat-paginator [length]="length"
-                     [pageSize]="20"
-                     [pageSizeOptions]="[20, 50, 100]"
+                     [pageIndex]="pageIndex"
+                     [pageSize]="pageSize"
+                     [pageSizeOptions]="pageSizeOptions"
                      (page)="pageEvent($event)">
       </mat-paginator>
     </ng-container>
